deployment/deployments-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-github-app-test
  labels:
    app: ml-github-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-github-app
  template:
    metadata:
      labels:
        app: ml-github-app
    spec:
      containers:
      - name: ml-github-app
        image: gcr.io/issue-label-bot-dev/github-mlapp-test
        command: ["python", "app.py"]
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 3
        ports:
        - containerPort: 443
        - containerPort: 80
        - containerPort: 3000
